--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -21,6 +21,12 @@
   display: flex;
   align-items: center;
   gap: 4px;
+  border: none;
+  border-radius: 4px;
+  width: 92px;
+  height: 32px;
+  justify-content: center;
+  cursor: pointer;
 }
 .deleteButton:hover {
   background-color: rgb(233, 130, 130);
@@ -35,6 +41,7 @@
   width: 220px;
   padding-left: 8px;
   height: 24px;
+  color: rgb(225, 225, 226);
 }
 .buttonChange {
   display: flex;
@@ -42,6 +49,12 @@
   gap: 4px;
   background-color: rgb(4, 54, 255);
   color: aliceblue;
+  border: none;
+  border-radius: 4px;
+  width: 92px;
+  height: 32px;
+  justify-content: center;
+  cursor: pointer;
 }
 .buttonChange:hover {
   background-color: rgb(57, 112, 253);
