--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -30,6 +30,11 @@
 .buttonSubmit {
   color: aliceblue;
   background-color: rgb(54, 27, 255);
+  border: none;
+  border-radius: 4px;
+  width: 120px;
+  height: 32px;
+  cursor: pointer;
 }
 .buttonSubmit:hover {
   background-color: rgb(75, 58, 205);
