--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -2,15 +2,20 @@
   color: rgb(232, 233, 234);
   text-decoration: none;
   background-color: rgb(0, 0, 255);
-  padding: 8px 16px;
-  width: 60px;
+  width: 82px;
+  height: 36px;
   display: flex;
   align-items: center;
   justify-content: center;
   border-radius: 4px;
   cursor: pointer;
+  transition: background-color 0.5s;
 }
 .link:hover {
   background-color: rgb(1, 104, 248);
   color: rgb(27, 27, 28);
+}
+.nav {
+  display: flex;
+  gap: 24px;
 }
