--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,41 +1,69 @@
-.contactForm {
-  display: flex;
-  flex-direction: column;
-  min-width: 240px;
-  gap: 24px;
-  align-items: center;
-  justify-content: center;
-  margin: 0 auto;
-  margin-bottom: 40px;
+@media screen and (min-width: 320px) {
+  .contactForm {
+    display: flex;
+    flex-direction: column;
+    min-width: 240px;
+    gap: 24px;
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto;
+    margin-bottom: 40px;
+  }
+  .inputContainer {
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+  }
+  .nameInput {
+    padding-left: 16px;
+    width: 240px;
+    height: 32px;
+    border-radius: 4px;
+    border: none;
+    border-bottom: 1px solid #827c7c;
+    border-left: 1px solid #827c7c;
+    border-right: 1px solid #827c7c;
+    outline: transparent;
+  }
+  .error {
+    color: rgb(231, 8, 8);
+  }
+  .buttonSubmit {
+    color: aliceblue;
+    background-color: rgb(54, 27, 255);
+    border: none;
+    border-radius: 4px;
+    width: 120px;
+    height: 32px;
+    cursor: pointer;
+  }
+  .buttonSubmit:hover {
+    background-color: rgb(75, 58, 205);
+  }
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-top: 40px;
+    gap: 24px;
+  }
+  .welcome {
+    text-transform: capitalize;
+    font-size: 22px;
+    font-weight: 500;
+  }
 }
-.inputContainer {
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+@media screen and (min-width: 768px) {
+  .nameInput {
+    width: 260px;
+    height: 40px;
+  }
+  .welcome {
+    font-size: 32px;
+  }
 }
-.nameInput {
-  padding-left: 8px;
-  width: 240px;
-  height: 32px;
-  border-radius: 4px;
-  border: none;
-  border-bottom: 1px solid #827c7c;
-  border-left: 1px solid #827c7c;
-  border-right: 1px solid #827c7c;
-  outline: transparent;
-}
-.error {
-  color: rgb(231, 8, 8);
-}
-.buttonSubmit {
-  color: aliceblue;
-  background-color: rgb(54, 27, 255);
-  border: none;
-  border-radius: 4px;
-  width: 120px;
-  height: 32px;
-  cursor: pointer;
-}
-.buttonSubmit:hover {
-  background-color: rgb(75, 58, 205);
+@media screen and (min-width: 1440px) {
+  .welcome {
+    font-size: 40px;
+  }
 }
