--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -1,19 +1,33 @@
-.list {
-  list-style: none;
-  display: flex;
-  gap: 24px;
-  flex-wrap: wrap;
-  margin: 0 auto;
-  align-items: center;
-  justify-content: center;
+@media screen and (min-width: 320px) {
+  .list {
+    list-style: none;
+    display: flex;
+    gap: 24px;
+    flex-wrap: wrap;
+    margin: 0 auto;
+    align-items: center;
+    justify-content: center;
+  }
+  .listItem {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 24px;
+    border: 1px solid #6a6666;
+    border-radius: 8px;
+    padding: 16px;
+    width: 276px;
+  }
+  .listItem:hover {
+    border: 1px solid #078cde;
+  }
 }
-.listItem {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 24px;
-  border: 1px solid #6a6666;
-  border-radius: 8px;
-  padding: 16px;
-  width: 260px;
+@media screen and (min-width: 768px) {
+  .container {
+    padding: 0 32px;
+  }
+  .listItem {
+    padding: 24px;
+    width: 294px;
+  }
 }
