--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,11 +1,31 @@
-.welcomeText {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin-top: 80px;
+@media screen and (min-width: 320px) {
+  .welcomeText {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+    padding: 0 16px;
+  }
+  .title {
+    display: flex;
+    align-items: center;
+    gap: 8px;
+    font-size: 18px;
+  }
 }
-.title {
-  display: flex;
-  align-items: center;
-  gap: 16px;
+@media screen and (min-width: 768px) {
+  .welcomeText {
+    margin-top: 60px;
+    padding: 0 32px;
+  }
+  .title {
+    gap: 16px;
+
+    font-size: 30px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .title {
+    font-size: 40px;
+  }
 }
