--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,16 +1,23 @@
 @media screen and (min-width: 320px) {
   .welcomeText {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-top: 40px;
     padding: 0 16px;
+    gap: 16px;
   }
   .title {
     display: flex;
     align-items: center;
     gap: 8px;
     font-size: 18px;
+  }
+  .desc {
+    text-align: center;
+    color: rgb(158, 158, 159);
+    font-size: 14px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -23,9 +30,15 @@
 
     font-size: 30px;
   }
+  .desc {
+    font-size: 16px;
+  }
 }
 @media screen and (min-width: 768px) {
   .title {
     font-size: 40px;
+  }
+  .desc {
+    font-size: 20px;
   }
 }
