--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: rgb(28, 29, 38);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -15,6 +15,12 @@
 #root {
   margin: 0 auto;
 }
+@media screen and (min-width: 1440px) {
+  body {
+    overflow: hidden;
+  }
+}
+
 p {
   margin: 0;
 }
