--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -1,4 +1,23 @@
 @media screen and (min-width: 320px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 60px;
+    gap: 24px;
+  }
+
+  .welcome {
+    text-transform: capitalize;
+    font-size: 22px;
+    font-weight: 500;
+    color: rgb(213, 223, 245);
+    overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    width: 260px;
+  }
+
   .contactForm {
     display: flex;
     flex-direction: column;
@@ -6,7 +25,6 @@
     gap: 24px;
     align-items: center;
     justify-content: center;
-    margin: 0 auto;
     margin-bottom: 40px;
   }
   .inputContainer {
@@ -14,46 +32,63 @@
     flex-direction: column;
     gap: 8px;
   }
+
+  .label {
+    color: rgb(213, 223, 245);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 24px;
+  }
+
   .nameInput {
+    color: rgb(80, 130, 242);
     padding-left: 16px;
     width: 240px;
-    height: 32px;
+    height: 40px;
     border-radius: 4px;
-    border: none;
-    border-bottom: 1px solid #827c7c;
-    border-left: 1px solid #827c7c;
-    border-right: 1px solid #827c7c;
+    background-color: transparent;
+    border: 1px solid rgb(42, 48, 82);
     outline: transparent;
+  }
+  .nameInput::placeholder {
+    color: rgb(47, 56, 117);
   }
   .error {
     color: rgb(231, 8, 8);
   }
+
   .buttonSubmit {
-    color: aliceblue;
-    background-color: rgb(54, 27, 255);
-    border: none;
-    border-radius: 4px;
-    width: 120px;
-    height: 32px;
-    cursor: pointer;
-  }
-  .buttonSubmit:hover {
-    background-color: rgb(75, 58, 205);
-  }
-  .container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-top: 40px;
-    gap: 24px;
-  }
-  .welcome {
-    text-transform: capitalize;
-    font-size: 22px;
+    color: rgb(28, 29, 38);
+    background-color: rgb(80, 130, 242);
+    font-size: 18px;
     font-weight: 500;
+    line-height: 24px;
+    border: none;
+    border-radius: 10px;
+    width: 160px;
+    height: 40px;
+    cursor: pointer;
+    align-items: center;
+    display: flex;
+    gap: 8px;
+    justify-content: center;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.34);
+    transition: box-shadow 0.5s;
+  }
+
+  .buttonSubmit:hover {
+    box-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
   }
 }
 @media screen and (min-width: 768px) {
+  .container {
+    align-items: flex-start;
+  }
+  .contactForm {
+    align-items: flex-start;
+    justify-content: flex-start;
+  }
+
   .nameInput {
     width: 260px;
     height: 40px;
@@ -62,8 +97,8 @@
     font-size: 32px;
   }
 }
-@media screen and (min-width: 1440px) {
+/* @media screen and (min-width: 1440px) {
   .welcome {
     font-size: 40px;
   }
-}
+} */
