--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,21 +1,30 @@
-.link {
-  color: rgb(232, 233, 234);
-  text-decoration: none;
-  background-color: rgb(0, 0, 255);
-  width: 76px;
-  height: 36px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 0.5s;
+@media screen and (min-width: 320px) {
+  .link {
+    color: rgb(28, 29, 38);
+    text-decoration: none;
+    background-color: rgb(80, 130, 242);
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.34);
+    width: 76px;
+    height: 40px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 10px;
+    cursor: pointer;
+    transition: box-shadow 0.5s;
+  }
+
+  .link:hover {
+    box-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
+  }
+
+  .nav {
+    display: flex;
+    gap: 24px;
+  }
 }
-.link:hover {
-  background-color: rgb(1, 104, 248);
-  color: rgb(27, 27, 28);
-}
-.nav {
-  display: flex;
-  gap: 24px;
+@media screen and (min-width: 678px) {
+  .link {
+    width: 92px;
+  }
 }
