--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -1,16 +1,33 @@
 @media screen and (min-width: 320px) {
   .button {
-    width: 82px;
-    height: 36px;
+    width: 76px;
+    height: 40px;
     border: none;
-    border-radius: 4px;
-    color: rgb(238, 245, 250);
-    background-color: rgb(0, 30, 255);
+    border-radius: 10px;
+    color: rgb(28, 29, 38);
+    background: rgb(80, 130, 242);
     cursor: pointer;
-    transition: background-color 0.5s;
+    transition: box-shadow 0.5s;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.34);
   }
   .button:hover {
-    color: rgb(27, 27, 27);
-    background-color: rgb(11, 100, 253);
+    box-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .button {
+    width: 92px;
+    height: 40px;
+    border: none;
+    border-radius: 10px;
+    color: rgb(28, 29, 38);
+    background: rgb(80, 130, 242);
+    cursor: pointer;
+    transition: box-shadow 0.5s;
+    box-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.34);
+  }
+  .button:hover {
+    box-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
   }
 }
