change part of style

--- a/src/index.css
+++ b/src/index.css
@@ -2,18 +2,41 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: rgb(28, 29, 38);
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  --button-color: rgb(80, 130, 242);
+  --button-shadow: 0px 4px 8px 0px rgba(0, 0, 0, 0.34);
+  --button-hover-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
+
+  --input-text-primary-color: rgb(80, 130, 242);
+  --input-focus-primary-color: rgb(158, 187, 255);
+  --input-placeholder-primary-color: rgb(47, 56, 117);
+  --input-border-primary-color: rgb(59, 67, 116);
+
+  --text-primary-color: rgb(213, 223, 245);
+
+  --red-primary-color: rgb(241, 97, 97);
+
+  --gradient-on-image-first-color: rgba(28, 29, 38, 0.328);
+  --gradient-on-image-second-color: rgba(28, 29, 38, 0.79);
 }
+
 #root {
   margin: 0 auto;
+}
+
+body {
+  background-image: linear-gradient(
+    rgba(43, 62, 234, 0.328),
+    rgba(28, 29, 38, 0.79)
+  );
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 100%;
 }
 @media screen and (min-width: 1440px) {
   body {
