--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -3,41 +3,67 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin-top: 40px;
-    padding: 0 16px;
+    padding: 120px 16px;
     gap: 16px;
+    height: 100vh;
+    background-image: url(../../../public/book.png),
+      linear-gradient(
+        to bottom,
+        rgba(28, 29, 38, 0.328),
+        rgba(28, 29, 38, 0.601)
+      );
+    background-repeat: no-repeat;
+    background-size: 100%, cover;
+    background-position: center;
   }
+
   .title {
+    color: rgb(213, 223, 245);
+    font-size: 28px;
+    font-weight: 700;
+    line-height: 32px;
+    text-align: center;
     display: flex;
-    align-items: center;
     gap: 8px;
-    font-size: 18px;
   }
+
   .desc {
     text-align: center;
-    color: rgb(158, 158, 159);
-    font-size: 14px;
+    color: rgb(213, 223, 245);
+    font-size: 16px;
   }
 }
+
 @media screen and (min-width: 768px) {
   .welcomeText {
-    margin-top: 60px;
-    padding: 0 32px;
+    padding: 120px 32px;
+    background-repeat: no-repeat;
+    background-size: 80%, cover;
+    background-position: center;
   }
+
   .title {
     gap: 16px;
 
     font-size: 30px;
   }
+
   .desc {
     font-size: 16px;
   }
 }
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1440px) {
+  .welcomeText {
+    padding: 120px 32px;
+    background-repeat: no-repeat;
+    background-size: 1100px, cover;
+    background-position: center bottom 10%;
+  }
+
   .title {
     font-size: 40px;
   }
+
   .desc {
     font-size: 20px;
   }
