--- a/src/index.css
+++ b/src/index.css
@@ -20,6 +20,7 @@
   --text-primary-color: rgb(213, 223, 245);
 
   --red-primary-color: rgb(241, 97, 97);
+  --red-hover-color: rgb(233, 130, 130);
 
   --gradient-on-image-first-color: rgba(28, 29, 38, 0.328);
   --gradient-on-image-second-color: rgba(28, 29, 38, 0.79);
