--- a/src/components/Contacts/Contact/Contact.module.css
+++ b/src/components/Contacts/Contact/Contact.module.css
@@ -1,21 +1,34 @@
 @media screen and (min-width: 320px) {
   .avatar {
-    width: 40px;
-    height: 40px;
+    width: 44px;
+    height: 44px;
   }
-  .listItemContainer {
+
+  .ItemContainer {
     display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-    gap: 8px;
-    justify-content: flex-end;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
   }
+
   .editIcon {
+    width: 24px;
+    height: 24px;
     color: var(--input-placeholder-primary-color);
+    transition: all 0.5s ease-in-out;
+  }
+  .editIcon:hover {
+    color: var(--button-color);
   }
 
   .deleteIcon {
+    width: 24px;
+    height: 24px;
+    transition: all 0.5s ease-in-out;
     color: var(--red-primary-color);
+  }
+  .deleteIcon:hover {
+    color: var(--red-hover-color);
   }
 
   .valuesContainer {
@@ -25,7 +38,7 @@
     gap: 12px;
   }
 
-  .listItemPice {
+  .ItemPice {
     display: flex;
     align-items: center;
     gap: 8px;
@@ -64,10 +77,6 @@
     outline: none;
   }
 
-  /* .deleteButton:hover {
-    background-color: rgb(233, 130, 130);
-  } */
-
   .buttonChange {
     display: flex;
     align-items: center;
@@ -78,6 +87,12 @@
     justify-content: center;
     cursor: pointer;
     outline: none;
+  }
+
+  .avatarAndButtons {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
   }
 }
 @media screen and (min-width: 768px) {
