--- a/src/components/Contacts/ContactList/ContactList.module.css
+++ b/src/components/Contacts/ContactList/ContactList.module.css
@@ -6,19 +6,21 @@
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-    height: 600px;
+    max-height: 600px;
     min-width: 300px;
   }
 
   .listItem {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: flex-end;
+    /* justify-content:space-between; */
     gap: 24px;
     border: 1px solid var(--input-border-primary-color);
     border-radius: 8px;
     padding: 16px;
     width: 276px;
+    transition: all 0.5s ease-in-out;
   }
 
   .listItem:hover {
