--- a/src/components/Header/AuthNav/AuthNav.module.css
+++ b/src/components/Header/AuthNav/AuthNav.module.css
@@ -26,6 +26,16 @@
   .link:hover {
     box-shadow: 0px 4px 14px 0px rgba(64, 123, 255, 0.54);
   }
+
+  .linkBox.highlighted::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: var(--red-primary-color);
+    display: block;
+    margin-top: 10px;
+    border-radius: 8px;
+  }
 }
 
 @media screen and (min-width: 768px) {
