--- a/src/components/Header/Navigation/Navigation.module.css
+++ b/src/components/Header/Navigation/Navigation.module.css
@@ -14,6 +14,7 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 24px;
+    flex-direction: column;
 
     transition: box-shadow 0.5s;
   }
@@ -25,6 +26,16 @@
   .nav {
     display: flex;
     gap: 24px;
+  }
+
+  .linkBox.highlighted::after {
+    content: "";
+    width: 100%;
+    height: 1px;
+    background-color: var(--red-primary-color);
+    display: block;
+    margin-top: 10px;
+    border-radius: 8px;
   }
 }
 @media screen and (min-width: 678px) {
