--- a/src/components/modalWindows/ConfirmModal/ConfirmModal.module.css
+++ b/src/components/modalWindows/ConfirmModal/ConfirmModal.module.css
@@ -3,10 +3,19 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: white;
-  padding: 20px;
+  background-image: linear-gradient(
+    to bottom,
+    var(--input-placeholder-primary-color),
+    var(--input-border-primary-color)
+  );
+  padding: 24px;
   border-radius: 8px;
-  width: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
+  height: 180px;
+  gap: 16px;
   box-shadow: 0px 5px 16px rgba(0, 0, 0, 0.2);
 }
 
@@ -16,45 +25,53 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.75);
+  background-image: linear-gradient(
+    to bottom,
+    var(--gradient-on-image-first-color),
+    var(--input-placeholder-primary-color)
+  );
 }
 
 .buttons {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
+  gap: 40px;
   margin-top: 8px;
+  width: 100%;
 }
 
 .buttonConfirm {
-  background-color: #fe1c02;
+  background-color: var(--red-primary-color);
   color: white;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.5s;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0px 4px 8px 0px var(--button-shadow);
 }
+
 .buttonConfirm:hover {
-  background-color: #f95e4d;
-  color: rgb(149, 149, 149);
+  box-shadow: 0px 4px 14px 0px var(--red-primary-color);
+  background-color: var(--red-hover-color);
 }
 
 .buttonCancel {
-  background-color: #0099ff;
+  background-color: var(--button-color);
   color: white;
   padding: 10px;
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  transition: background-color 0.5s;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0px 4px 8px 0px var(--button-shadow);
 }
 .buttonCancel:hover {
-  background-color: #67c2ff;
-  color: rgb(109, 109, 109);
+  box-shadow: 0px 4px 14px 0px var(--button-color);
 }
 
 .title {
-  color: black;
+  color: var(--text-primary-color);
   font-size: 20px;
   font-weight: 400;
   text-align: center;
